--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+spring.datasource.url=jdbc:h2:mem:teste
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=${HOSTNAME}
-spring.datasource.username=${USERNAME}
-spring.datasource.password=${PASSWORD}
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
